# forward

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  bootstrap.nuget.ps1  bootstrap.py
libs/: CMakeLists.txt  bootstrap.json
libs/assimp/Win64/: assimp-vc130-mt.lib
libs/cmake/dear_imgui/: CMakeLists.txt
src/: CMakeLists.txt  PCH.h  SmartPtrs.cpp  SmartPtrs.h  Types.cpp  Types.h  libForward-config.cmake.in
src/MaterialXGenHlsl/: CMakeLists.txt  Export.h  HlslResourceBindingContext.cpp  HlslResourceBindingContext.h  HlslShaderGenerator.cpp  HlslShaderGenerator.h  HlslSyntax.cpp  HlslSyntax.h
src/MaterialXGenHlsl/Nodes/: BitangentNodeHlsl.cpp  BitangentNodeHlsl.h  BlurNodeHlsl.cpp  BlurNodeHlsl.h  ClosureMixNodeHlsl.cpp  ClosureMixNodeHlsl.h  FrameNodeHlsl.cpp  FrameNodeHlsl.h  GeomColorNodeHlsl.cpp  GeomColorNodeHlsl.h  GeomPropValueNodeHlsl.cpp  GeomPropValueNodeHlsl.h  HeightToNormalNodeHlsl.cpp  HeightToNormalNodeHlsl.h  LightCompoundNodeHlsl.cpp  LightCompoundNodeHlsl.h  LightNodeHlsl.cpp  LightNodeHlsl.h  LightSamplerNodeHlsl.cpp  LightSamplerNodeHlsl.h  LightShaderNodeHlsl.cpp  LightShaderNodeHlsl.h  NormalNodeHlsl.cpp  NormalNodeHlsl.h  NumLightsNodeHlsl.cpp  NumLightsNodeHlsl.h  PositionNodeHlsl.cpp  PositionNodeHlsl.h  SurfaceNodeHlsl.cpp  SurfaceNodeHlsl.h  SurfaceShaderNodeHlsl.cpp  SurfaceShaderNodeHlsl.h  TangentNodeHlsl.cpp  TangentNodeHlsl.h  TexCoordNodeHlsl.cpp  TexCoordNodeHlsl.h  TimeNodeHlsl.cpp  TimeNodeHlsl.h  TransformNormalNodeHlsl.cpp  TransformNormalNodeHlsl.h  (+6 more)
src/RHI/: CommandList.h  CommandQueue.h  DataFormat.h  Device.cpp  Device.h  MemberLayout.h  RendererCapability.h  SceneData.cpp  SceneData.h  VertexFormat.cpp  VertexFormat.h
src/RHI/FrameGraph/: Effect.h  FrameGraph.cpp  FrameGraph.h  Geometry.cpp  Geometry.h  PipelineStateObjects.cpp  PipelineStateObjects.h  RenderPass.cpp  RenderPass.h  RenderPassHelper.cpp  RenderPassHelper.h  Renderer.cpp  Renderer.h
src/RHI/ResourceSystem/: Buffer.cpp  Buffer.h  DeviceObject.cpp  DeviceObject.h  DeviceResource.cpp  DeviceResource.h  GraphicsObject.cpp  GraphicsObject.h  Resource.cpp  Resource.h  ShaderTable.cpp  ShaderTable.h  Texture.cpp  Texture.h
src/RHI/ShaderSystem/: Shader.cpp  Shader.h
src/RHI/Text/: Font.cpp  Font.h  FontArialW600H36.cpp  FontMS_Shell_Dlg_2W50H8.h  FontTahomaW500H24.cpp
src/applications/: CMakeLists.txt
src/applications/AOBaker/: AOBaker.cpp  CMakeLists.txt
src/applications/AssimpDemo/: CMakeLists.txt  source.cpp
src/applications/BasicGeometryApp/: CMakeLists.txt  source.cpp
src/applications/BasicGeometryDX12/: BasicGeometryDX12.cpp  CMakeLists.txt
src/applications/BasicGeometryFrameGraph/: CMakeLists.txt  source.cpp
src/applications/CmdApp/: CMakeLists.txt  source.cpp
src/applications/DXR_Tutorial_12/: CMakeLists.txt  dxr_tutorial_12.cpp
src/applications/DXR_Tutorial_14/: CMakeLists.txt  dxr_tutorial_14.cpp
src/applications/DXR_Tutorial_3/: CMakeLists.txt  dxr_tutorial_3.cpp
src/applications/DXR_Tutorial_4/: CMakeLists.txt  dxr_tutorial_4.cpp
src/applications/DXR_Tutorial_4_2/: CMakeLists.txt  dxr_tutorial_4_2.cpp
src/applications/DXR_Tutorial_5/: CMakeLists.txt  dxr_tutorial_5.cpp
src/applications/DXR_Tutorial_6/: CMakeLists.txt  dxr_tutorial_6.cpp
src/applications/DXR_Tutorial_8/: CMakeLists.txt  dxr_tutorial_8.cpp
src/applications/DXR_Tutorial_9/: CMakeLists.txt  dxr_tutorial_9.cpp
src/applications/HelloDX12/: CMakeLists.txt  HelloDX12App.cpp
src/applications/HelloFrameGraphDX12/: CMakeLists.txt  HelloFrameGraphDX12.cpp
src/applications/HelloFrameGraphDemo/: CMakeLists.txt  source.cpp
src/applications/HelloPyQT/: CMakeLists.txt  HelloPyQT.h  HelloPyQT.py  (+1 more)
src/core/: PCH.h  SmartPtrs.cpp  SmartPtrs.h  Types.cpp  Types.h
src/effects/: AutodeskStandardSurface.h  MaterialXEffect.h  Midnite_Fleece_Fabric.h  SimpleAlbedo.h
src/geometry/: Box3f.cpp  Box3f.h  CompositeShape.cpp  CompositeShape.h  Cone3f.cpp  Cone3f.h  Frustum3f.cpp  Frustum3f.h  LineIndices.cpp  LineIndices.h  Plane3f.cpp  Plane3f.h  PointIndices.cpp  PointIndices.h  Ray3f.cpp  Ray3f.h  Shape3D.cpp  Shape3D.h  Sphere3f.cpp  Sphere3f.h  Triangle3f.cpp  Triangle3f.h  TriangleIndices.cpp  TriangleIndices.h
src/include/: Application.h  Singleton.h  TStateArrayMonitor.h  TStateArrayMonitor.inl  TStateMonitor.h
src/intersection/: Intersector.cpp  Intersector.h  IntrRay3fBox3f.cpp  IntrRay3fBox3f.h  IntrRay3fSphere3f.cpp  IntrRay3fSphere3f.h
src/macOS/: AppDelegate.h  AppDelegate.m  ApplicationMac.cpp  ApplicationMac.h  ApplicationMacImpl.h  ApplicationMacImpl.mm  CMakeLists.txt  DeviceDrawingStateMetal.h  DeviceDrawingStateMetal.mm  DevicePipelineStateObjectMetal.h  DevicePipelineStateObjectMetal.mm  Info.plist  MainMenu.xib  MetalViewController.h  MetalViewController.mm  RendererMetal.h  RendererMetal.mm  ShaderMetal.h  ShaderMetal.mm  macUtil.h  macUtil.mm
src/math/: Matrix3f.cpp  Matrix3f.h  Matrix4f.cpp  Matrix4f.h  Quaternion.h  Quaternion.inl  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
src/osx/: CMakeLists.txt
src/render/: DataFormat.cpp  DataFormat.h  Device.cpp  Device.h  PrimitiveTopology.h  RendererCapability.h  SceneData.cpp  SceneData.h  VertexFormat.cpp  VertexFormat.h  render.cpp  render.h
src/renderers/: AutodeskStandardSurface.h  MaterialXRenderer.h  Midnite_Fleece_Fabric.h  RTAORenderer.h  RTGBufferRenderer.h  RTLambertRenderer.h  RT_Temp.h  RTggxRenderer.h  RasterGBufferRenderer.h  ReferencePTRenderer.h  SimpleAlbedo.h
src/tools/: CMakeLists.txt
src/utilities/: Application.h  ArcBall.h  CallStackTraceGenerator.cpp  CallStackTraceGenerator.h  FPCamera.cpp  FPCamera.h  FileLoader.cpp  FileLoader.h  FileSaver.h  FileSaverLoader.cpp  FileSystem.cpp  FileSystem.h  GeometryLoader.cpp  GeometryLoader.h  Log.cpp  Log.h  ProfilingHelper.cpp  ProfilingHelper.h  Singleton.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  tinyddsloader.h
src/windows/: ApplicationWin.cpp  ApplicationWin.h  CMakeLists.txt  DXGIAdapter.cpp  DXGIAdapter.h  DXGIOutput.cpp  DXGIOutput.h  Log.cpp  d3dUtil.cpp  d3dUtil.h  main.cpp
(+707 files in other folders)
