cmake_minimum_required(VERSION 3.20)
cmake_policy(SET CMP0074 NEW)
project("forward")
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(forward_repository_root ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${forward_repository_root}/cmake")
include(CMakeMacros)
add_subdirectory("src/")
add_subdirectory("extern/")