cmake_minimum_required(VERSION 3.10)

add_subdirectory(SmartPtrDemo)
add_subdirectory(HelloRaytracing)
add_subdirectory(RaytracingSimpleLighting)
add_subdirectory(HelloFrameGraphDemo)
add_subdirectory(BasicGeometryFrameGraph)
add_subdirectory(ModelViewer)
add_subdirectory(MaterialXReader)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	#add_subdirectory(HelloWorld)
	#add_subdirectory(BasicGeometryApp)
	add_subdirectory(MSAA)
	#add_subdirectory(ShadowMapDemo)
	#add_subdirectory(AssimpDemo)
	#add_subdirectory(SDFShadowDemo)
	add_subdirectory(TexLoadingTest)
	#------DirectX 12 apps -----------
	add_subdirectory(HelloDX12)
	#add_subdirectory(BasicGeometryDX12)
	#add_subdirectory(HelloFrameGraphDX12)
	#------FrameGraph apps -----------

	add_subdirectory(OffScreenRenderingDemo)
	add_subdirectory(PBRLUTBaker)
	#------Dlls-----------------------
	#add_subdirectory(forwardDX11_Dll)
	add_subdirectory(HelloPyQT)
endif()

set(UnityPath "" CACHE PATH "Specify the Unity path")
if(NOT "${UnityPath}" STREQUAL "")
	add_subdirectory(UnityPlugin)
	include_directories("${UnityPath}")
endif()