cmake_minimum_required(VERSION 3.10)

add_subdirectory(SmartPtrDemo)
add_subdirectory(HelloRaytracing)
add_subdirectory(RaytracingSimpleLighting)
add_subdirectory(ReferencePT)
add_subdirectory(HelloFrameGraphDemo)
add_subdirectory(BasicGeometryFrameGraph)
add_subdirectory(ModelViewer)
add_subdirectory(MaterialXReader)
add_subdirectory(HelloVolumeRendering)
# add_subdirectory(VolumeViewer)
add_subdirectory(DXR_Tutorial_3)
add_subdirectory(DXR_Tutorial_4)
add_subdirectory(DXR_Tutorial_5)
add_subdirectory(DXR_Tutorial_6)
add_subdirectory(DXR_Tutorial_8)
add_subdirectory(DXR_Tutorial_9)
add_subdirectory(DXR_Tutorial_12)
add_subdirectory(DXR_Tutorial_14)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	#add_subdirectory(HelloWorld)
	#add_subdirectory(BasicGeometryApp)
	add_subdirectory(MSAA)
	#add_subdirectory(ShadowMapDemo)
	#add_subdirectory(AssimpDemo)
	#add_subdirectory(SDFShadowDemo)
	add_subdirectory(TexLoadingTest)
	#------DirectX 12 apps -----------
	add_subdirectory(HelloDX12)
	#add_subdirectory(BasicGeometryDX12)
	#add_subdirectory(HelloFrameGraphDX12)
	#------FrameGraph apps -----------

	add_subdirectory(OffScreenRenderingDemo)
	add_subdirectory(PBRLUTBaker)
	#------Dlls-----------------------
	#add_subdirectory(forwardDX11_Dll)
	add_subdirectory(HelloPyQT)
endif()

set(UnityPath "" CACHE PATH "Specify the Unity path")
if(NOT "${UnityPath}" STREQUAL "")
	add_subdirectory(UnityPlugin)
	include_directories("${UnityPath}")
endif()